SecurityGroup.yml
#
#---- PARTIE 2 : GROUPES DE SECURITES
#
#------ RDS Security Group 
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Autorisation de la connexion a la base de donnee depuis le reseau interne
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 10.0.0.0/16
      - IpProtocol: udp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 10.0.0.0/16
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: 0.0.0.0/0
      VpcId: !Ref InfraVPC
      Tags:
        - Key: Name
          Value: RDSSecurityGroup
#------ WEB Security Group 
  WEBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Infra EC2 security group
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref InfraLoadBalancerSecurityGroup
      VpcId: !Ref InfraVPC
      Tags:
        - Key: Name
          Value: WebSecurityGroup
#------ Groupe de sécurité  SSH
  SSHSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Autorisation de la connexion ssh uniquement depuis le reseau interne  
      SecurityGroupIngress: 
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0 # réseau interne
      SecurityGroupEgress:
      - IpProtocol: -1
        CidrIp: 0.0.0.0/0
      VpcId: !Ref BenitcheVPC
      Tags:
        - Key: Name
          Value: SSHSecurityGroup
